--- a/README
+++ b/README
@@ -4,7 +4,7 @@ An in-progress tool to enable users to centrally manage their personal and profe
 Goals for the next month:
 	1) import of contacts from various services
 	2) automatic consolidation of contacts based on shared identifiers
-	3) custom grouping of contacts (with possible group namespaces)
+	3) custom grouping of contacts (with possible account namespaces)
 	4) Identifier-based search on other services for people who you are not currently friends with
 
 
